--- a/server_project/package.json
+++ b/server_project/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "better-scroll": "^1.13.2",
+    "element-ui": "^2.4.9",
+    "min-ui": "^0.0.2",
     "vue": "^2.5.17",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1",
@@ -20,6 +22,8 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.0",
     "@vue/cli-service": "^3.1.0",
+    "babel-plugin-component": "^1.1.1",
+    "babel-preset-es2015": "^6.24.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17"
