--- a/server_project/package.json
+++ b/server_project/package.json
@@ -13,6 +13,7 @@
     "better-scroll": "^1.13.2",
     "element-ui": "^2.4.9",
     "min-ui": "^0.0.2",
+    "mint-ui": "^2.2.13",
     "vue": "^2.5.17",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1",
