--- a/server_project/package.json
+++ b/server_project/package.json
@@ -12,13 +12,15 @@
     "babel-polyfill": "^6.26.0",
     "better-scroll": "^1.13.2",
     "element-ui": "^2.4.9",
+    "lodash": "^4.17.11",
     "min-ui": "^0.0.2",
     "mint-ui": "^2.2.13",
     "vue": "^2.5.17",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1",
     "vue-waterfall": "^1.0.6",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "webpack-dev-server": "^3.1.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.0",
