--- a/server_project/package.json
+++ b/server_project/package.json
@@ -29,6 +29,7 @@
     "babel-preset-es2015": "^6.24.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "vue-progressbar": "^0.7.5",
     "vue-template-compiler": "^2.5.17"
   }
 }
